# GameOfLifeVisualizer

./: .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml  lint.yml  windows.yml
GameOfLife/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameOfLife.cpp  GameOfLife.pro  GameOfLifeApp.qrc  Makefile  board_ui.h  cell.cpp  cell.h  colortab.cpp  colortab.h  displaywindow.cpp  displaywindow.h  main.cpp  screenshotdialog.cpp  screenshottab.cpp  screenshottab.h  settingsdialog.cpp  settingsdialog.h  view.cpp  view.h
GameOfLifeBL/: GameBoard.cpp  GameBoard.h  Makefile
GameOfLifeLogic/: CMakeLists.txt  GameOfLifeLogic.pro  gameboard.cpp  gameboard.h  main.cpp
GameOfLifeTests/: CMakeLists.txt  GameOfLifeTests.pro  tst_gameboardtest.cpp
app/: CMakeLists.txt  board_ui.h  cell.cpp  cell.h  displaywindow.cpp  displaywindow.h  game_of_life_app.qrc  screenshotdialog.h  screenshottab.cpp  screenshottab.h  settingreaderwriter.h  view.cpp  view.h
app/Data/: settings.xml
cmake/: CompilerWarnings.cmake  Conan.cmake
cmake/scripts/: dev-tools.cmake
display/: main.cpp
gameBoard/: GameBoard.h
gameBoard/src/: GameBoard.cpp
gameBoard/test/: GameBoardTest.cpp
include/: GameBoard.h
include/GameOfLife/: gameboard.h  gameboard_out_of_bounds.h
source/source_BL/: GameBoard.cpp  main.cpp
source/source_tests/: GameBoardTest.cpp
src/: CMakeLists.txt  gameboard.cpp  gameboard_out_of_bounds.cpp
src/cell_board/: CMakeLists.txt  cell_board.cpp  cell_board.h  main.cpp
src/gif_generator/: CMakeLists.txt  colour_kd_tree.cpp  colour_kd_tree.h  colour_pallete.cpp  colour_pallete.h  gif.h  gif_generator.cpp  gif_generator.h  gif_writer.cpp  gif_writer.h  image_formats.cpp  image_formats.h  image_frame.cpp  image_frame.h  ppn.cpp  ppn.h  ppn_bin.cpp  ppn_bin.h
src/gif_generator/image/: RGB_pixel.cpp  RGB_pixel.h  colour_pallete.cpp  colour_pallete.h  image_formats.cpp  image_formats.h  image_frame.cpp  image_frame.h  ppn.cpp  ppn.h  ppn_bin.cpp  ppn_bin.h
src/visualization/: CMakeLists.txt  GameOfLifeApp.qrc  board_cell.cpp  board_cell.h  board_model.cpp  board_model.h  board_scene.cpp  board_scene.h  board_status.cpp  board_status.h  board_ui.h  board_view.cpp  board_view.h  board_window.cpp  board_window.h  cell.cpp  cell.h  cell_board_model.cpp  cell_board_model.h  displaywindow.cpp  displaywindow.h  dropdown_menu.cpp  dropdown_menu.h  main.cpp  main_menu.cpp  main_menu.h  main_view.h  main_window.cpp  main_window.h  view.cpp  view.h
src/visualization/popup/: recording_viewer.cpp  recording_viewer.h  screenshot_viewer.cpp  screenshot_viewer.h
src/visualization/submenu/: edit_menu.cpp  edit_menu.h  file_menu.cpp  file_menu.h  run_menu.cpp  run_menu.h  view_menu.cpp  view_menu.h
tests/: CMakeLists.txt  cell_board_test.cpp  gameboard_test.cpp
tests/cell_board_tests/: cell_board_test.cpp
tests/gif_generator_tests/: RGB_pixel_test.cpp  colour_pallete_test.cpp  gif_writer_test.cpp  image_formats_test.cpp  ppn_test.cpp
